# limes

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  flake.nix
crates/limes-cli/: Cargo.toml  Justfile
crates/limes-cli/src/: main.rs
crates/limes-common/: Cargo.toml
crates/limes-common/src/: auth.rs  error.rs  events.rs  lib.rs
crates/limes-common/src/auth/: mod.rs  noop.rs  traits.rs
crates/limes-common/src/auth/pam/: backend.rs  conversation.rs  mod.rs  raw.rs  session.rs  status.rs  user.rs
crates/limes-core/: Cargo.toml
crates/limes-core/src/: auth.rs  config.rs  error.rs  events.rs  frontend.rs  lib.rs  lock.rs  runtime.rs  session.rs  wayland_lock.rs
crates/limes-frontend-native/: Cargo.toml
crates/limes-frontend-native/src/: main.rs
crates/limes-lock/: Cargo.toml
crates/limes-lock/src/: lib.rs  lock.rs  manager.rs  runtime.rs  wayland_lock.rs
crates/limes-lock/src/display/: mod.rs
crates/limes-lock/src/display/wayland/: app.rs  mod.rs  worker.rs
crates/limes-login/: Cargo.toml
crates/limes-login/src/: lib.rs  runtime.rs  session.rs  session_catalog.rs
crates/limes-login/src/session_catalog/: command.rs  desktop.rs  dirs.rs  env_entries.rs  mod.rs
crates/limes-proto/: Cargo.toml
crates/limes-proto/src/: auth.rs  events.rs  lib.rs  lock.rs  session.rs
examples/full-screenlock/: Cargo.toml  README.md
examples/simple-lock/: Cargo.toml  README.md
examples/simple-lock/src/: main.rs
