[package]
name = "limes-cli"
description = "The limes command line entrypoint."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "limes"
path = "src/main.rs"

[dependencies]
limes-core = { path = "../limes-core" }
limes-proto = { path = "../limes-proto" }
