[package]
name = "limes-core"
description = "Backend authentication, lock, session, and frontend orchestration for limes."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
limes-proto = { path = "../limes-proto" }

[lib]
path = "src/lib.rs"
