[package]
name = "limes-core"
description = "Login manager and screenlock library for limes frontends."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
limes-proto = { path = "../limes-proto" }
smithay-client-toolkit = "0.19"
wayland-client = "0.31"

[lib]
path = "src/lib.rs"
