[package]
name = "limes-login"
description = "Login manager/session-launch library for limes frontends."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
limes-common = { path = "../limes-common" }
limes-proto = { path = "../limes-proto" }

[lib]
path = "src/lib.rs"
