[package]
name = "limes-proto"
description = "Lightweight shared types and events for limes frontends and core."
categories = ["authentication", "data-structures"]
documentation = "https://docs.rs/limes-proto"
edition.workspace = true
homepage.workspace = true
keywords = ["login", "screenlock", "events", "protocol"]
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
zeroize.workspace = true

[lib]
path = "src/lib.rs"
