[package]
name = "limes-simple-lock"
description = "Simple iced lock-screen example for limes."
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
iced = { version = "0.14", features = ["tokio"] }
iced_layershell = "0.18"
limes-lock = { path = "../../crates/limes-lock" }
